--- a/packages/firebase_game_services/pubspec.yaml
+++ b/packages/firebase_game_services/pubspec.yaml
@@ -11,11 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_game_services_platform_interface: ^2.2.0
+  firebase_game_services_platform_interface:
     path: ../firebase_game_services_platform_interface/
-  firebase_game_services_apple: ^2.2.0
+  firebase_game_services_apple:
     path: ../firebase_game_services_apple/
-  firebase_game_services_google: ^2.2.0
+  firebase_game_services_google:
     path: ../firebase_game_services_google/
 
 dev_dependencies:
