--- a/packages/firebase_game_services_apple/pubspec.yaml
+++ b/packages/firebase_game_services_apple/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     sdk: flutter
 
   firebase_game_services_platform_interface:
-    git: https://github.com/johannesvuorinen/firebase_game_services
+    git: 
+      url: https://github.com/johannesvuorinen/firebase_game_services
       path: ./packages/firebase_game_services_platform_interface/
 
 dev_dependencies:
