--- a/packages/firebase_game_services_google/pubspec.yaml
+++ b/packages/firebase_game_services_google/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
     sdk: flutter
 
   firebase_game_services_platform_interface:
-    path: ../firebase_game_services_platform_interface/
+    git: 
+      url: https://github.com/johannesvuorinen/firebase_game_services
+      path: ./packages/firebase_game_services_platform_interface/
 
 dev_dependencies:
   flutter_test:
