--- a/packages/firebase_game_services_platform_interface/pubspec.yaml
+++ b/packages/firebase_game_services_platform_interface/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   
   plugin_platform_interface: ">=2.1.4 <3.0.0"
-  firebase_auth: ">=4.6.2"
+  firebase_auth: ">=4.6.3 <6.0.0"
 
 dev_dependencies:
   flutter_test:
